Updated colors and fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 
 main{
     flex: 1;
-    background-color: lightgray;
+    background-color: #768a85;
 }
 
 h2{
@@ -21,12 +21,12 @@ h2{
 
 header{
     display: flex;
-    border-bottom: 2px solid white;
-    background-color: #0c0c0c;
+    border-bottom: 4px solid #768a85;
+    background-color: #202425;
 }
 
 nav {   
-    background-color: #0c0c0c;
+    background-color: #202425;
     width: 100%;
     display: flex;
     align-items: center;
@@ -50,7 +50,7 @@ nav ul li a{
 }
 
 nav ul li a:link, nav ul li a:visited{
-    color: white;
+    color: #eeebe8;
     text-decoration: none;
     border-bottom: 1px solid 0c0c0c;
 }
@@ -83,18 +83,18 @@ nav ul li a:active{
 }
 
 .background-tint{
-    background-color: rgba(200,100,0,.5);
+    background-color: #817668;
     background-blend-mode: multiply;
 }
 
 .banner h1{
-    color:white;
+    color:#eeebe8;
     margin-bottom: 0rem;
     font-size: 3rem;
 }
 
 .banner p{
-    color:white;
+    color:#eeebe8;
     font-size: 1.3rem;
 }
 
@@ -126,6 +126,7 @@ figure{
     border-radius: 1rem;
     padding: 1rem;
     box-shadow: 0 0 8px 5px rgb(161, 161, 161);
+
 }
 
 figure img{
@@ -135,6 +136,8 @@ figure img{
 
 .projects figcaption {
     font-size: 1.15rem;
+    width: fit-content;
+    margin: auto;
 }
 
 @media(min-width: 420px){
@@ -173,9 +176,10 @@ figure img{
 /* footer */
 
 footer{
-    background-color: grey;
+    background-color: #202425;
     padding: 1rem;
     font-size: 1.1rem;
+    color: #eeebe8;
 }
 
 @media(min-width:750px){
@@ -186,7 +190,7 @@ footer{
 }
 
 #wrapper{
-    max-width: 1300px;
+    max-width: 1200px;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
